docs/tests/parser/types/invalid/TypeFuncPointerMissingReturn.b
fn void test() {
    let fp (int, float) callback;
}
